<resources>
    <string name="app_name">sosanara</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_find_id">FindIdActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_find_pawd">FindPawdActivity</string>
    <string name="title_activity_reset_pawd">ResetPawdActivity</string>
    <string name="title_activity_test_send_image">testSendImageActivity</string>
    <string name="title_activity_test_image">testImage</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_graph_result">GraphResultActivity</string>
    <string name="title_activity_history_item_click">HistoryItemClickActivity</string>
    <string name="title_activity_testtest">testtest</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_user_info_change_acitivty">UserInfoChangeAcitivty</string>
    <string name="title_activity_change_user_info">ChangeUserInfoActivity</string>


    <string name="uri_sign_up">http://113.198.84.37/api/v1/userInfo/history/</string>
    <string name="uri_login">http://113.198.84.37/rest-auth/login/</string>
    <string name="uri_logout">http://113.198.84.37/rest-auth/logout/</string>
    <string name="uri_change_pawd">http://113.198.84.37/rest-auth/password/change/</string>
    <string name="uri_reset_pawd">http://113.198.84.37/rest-auth/password/reset/confirm/</string>
    <string name="uri_send_image">http://113.198.84.37/api/v1/picture/</string>
    <string name="uri_graph">http://113.198.84.37/api/v1/userInfo/graph/</string>
    <string name="uri_history">http://113.198.84.37/api/v1/userInfo/history/</string>
    <string name="uri_statistic">http://113.198.84.37/api/v1/userInfo/statistic/</string>


    <string name="success_sign_up">회원가입 성공</string>
    <string name="fail_sign_up">회원가입 실패</string>
    <string name="success_login">로그인 성공</string>
    <string name="fail_login">로그인 실패</string>
    <string name="toolbar_sign_up">회원가입</string>
    <string name="toolbar_login">로그인</string>
    <string name="toolbar_logout">로그아웃</string>
    <string name="toolbar_change_pawd">비밀번호 변경</string>
    <string name="toolbar_find_pawd">비밀번호 찾기</string>
    <string name="toolbar_user_info">사용자 정보</string>
    <string name="toolbar_user_info_change">사용자 정보수정</string>
    <string name="toolbar_picture_confirm">사진확인</string>
    <string name="toolbar_result">결과</string>
    <string name="toolbar_history">히스토리</string>
    <string name="toolbar_history_detail">히스토리 상세보기</string>
    <string name="toolbar_statistic">통계</string>

    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="reset_pawd">비밀번호 재설정</string>
    <string name="find_pawd">비밀번호 찾기</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="id">아이디</string>
    <string name="pawd">비밀번호</string>
    <string name="confirm_pawd">비밀번호 확인</string>
    <string name="change_info_completed">변경하기</string>
    <string name="change_pawd">비밀번호 변경</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="gender">성별</string>
    <string name="birth">출생연도</string>
    <string name="new_pawd">새 비밀번호</string>
    <string name="new_pawd_confirm">새 비밀번호 확인</string>
    <string name="old_pawd">현재 비밀번호</string>
    <string name="change_info">개인정보 수정</string>

    <string name="sign_up_complete">회원가입 완료</string>
    <string name="uid">UID</string>
    <string name="token">Token</string>
    <string name="send">전송</string>
    <string name="change">변경하기</string>
    <string name="retry_take_picture">다시찍기</string>
    <string name="result_confirm">결과확인</string>
    <string name="take_picture">두발 상태 점검하기</string>
    <string name="bald_type">유형</string>
    <string name="bald_progress">탈모진행율</string>
    <string name="toolbar_gallary_click">사진첩 상세보기</string>
    <string name="toolbar_gallary">사진첩</string>
    <string name="first_contrast">최초대비</string>
    <string name="before_contrast">이전대비</string>
    <string name="notCompareData">비교할 데이터가 없습니다.</string>

    <string-array name="birth">
        <item>출생연도</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_font">FontActivity</string>
    <string name="title_activity_type_dialog">TypeDialog</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
