<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/whiteColor"
        android:text="@string/toolbar_change_pawd"
        android:textSize="19.5sp"
        android:gravity="center_horizontal"/>
</android.support.v7.widget.Toolbar>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/oldPawdView"
        android:background="@drawable/text_border"
        android:hint="@string/old_pawd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="27.5dp"
        android:paddingLeft="18.3dp"
        android:paddingRight="18.3dp"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/changePawd1View"
        android:background="@drawable/text_border"
        android:hint="@string/new_pawd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10.8dp"
        android:paddingLeft="18.3dp"
        android:paddingRight="18.3dp"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/changePawd2View"
        android:background="@drawable/text_border"
        android:hint="@string/new_pawd_confirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10.8dp"
        android:paddingLeft="18.3dp"
        android:paddingRight="18.3dp"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/changePawdBtn"
        android:text="전송"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="18.3dp"
        android:paddingRight="18.3dp"
        android:textColor="@color/whiteColor"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:onClick="changePawd"
        android:background="@drawable/button_border"/>

    <!--android:background="@color/btnBackgoundColor"-->
</LinearLayout>

<!--android:layout_below="@+id/password"-->
</LinearLayout>


