<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/id"
            android:layout_width="45.5dp"
            android:layout_height="23dp"
            android:layout_marginTop="8.5dp"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="@color/hintTextColor"
            android:gravity="left" />

        <TextView
            android:id="@+id/userInfoNameView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4.3dp"
            android:layout_marginLeft="46.5dp"
            android:textSize="16sp"
            android:textColor="@color/textViewColor"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/name"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginTop="8.5dp"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="@color/hintTextColor"
            android:gravity="left"/>

        <TextView
            android:id="@+id/userInfoEmailView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4.3dp"
            android:layout_marginLeft="32dp"
            android:textSize="16sp"
            android:textColor="@color/textViewColor"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/email"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginTop="8.5dp"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="@color/hintTextColor"
            android:gravity="left"/>

        <TextView
            android:id="@+id/userInfoGenderView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4.3dp"
            android:layout_marginLeft="32dp"
            android:textSize="16sp"
            android:textColor="@color/textViewColor"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/gender"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginTop="8.5dp"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="@color/hintTextColor"
            android:gravity="left"/>

        <TextView
            android:id="@+id/userInfoAgeView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4.3dp"
            android:layout_marginLeft="32dp"
            android:textSize="16sp"
            android:textColor="@color/textViewColor"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/birth"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginTop="8.5dp"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="@color/hintTextColor" />

        <TextView
            android:id="@+id/userInfoUserNameView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4.3dp"
            android:layout_marginLeft="32dp"
            android:textSize="16sp"
            android:textColor="@color/textViewColor"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/userInfoChangeBtn"
            android:text="@string/change_info"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginTop="52.8dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:onClick="checkLogin"
            android:background="@drawable/btn_border_green"/>

        <Button
            android:id="@+id/pswdChangeBtn"
            android:text="@string/reset_pawd"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="52.8dp"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:background="@drawable/btn_border_green"/>

    </LinearLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:text="@string/logout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10.5dp"
        android:paddingLeft="18.3dp"
        android:paddingRight="18.3dp"
        android:textColor="@color/whiteColor"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:background="@drawable/btn_border_black"/>

    <!--<TextView
        android:id="@+id/userInfoUserNameView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

    <!--<TextView
        android:id="@+id/userInfoEmailView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/userInfoAgeView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/userInfoNameView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/userInfoGenderView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="개인정보 수정"
        android:id="@+id/userInfoChangeBtn"
        android:onClick="checkLogin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="패스워드 수정"
        android:id="@+id/pswdChangeBtn"
        android:layout_marginTop="10dp" />-->

    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="로그아웃"
        android:id="@+id/logoutBtn"
        android:layout_marginTop="10dp" />-->

</LinearLayout>

